--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -58,6 +58,7 @@
     <jmh.version>1.26</jmh.version>
 
     <!-- Jenkins Plug-in Dependencies Versions -->
+    <autograding.version>3.3.1</autograding.version>
     <token-macro.version>2.12</token-macro.version>
     <jenkins-maven-plugin.version>3.8</jenkins-maven-plugin.version>
     <matrix-project.version>1.18</matrix-project.version>
@@ -486,7 +487,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>autograding</artifactId>
-      <version>3.1.0</version>
+      <version>${autograding.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
