--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,7 +29,7 @@
 
     <analysis-model-api.version>9.3.2</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
-    <forensics-api-plugin.version>0.8.0-SNAPSHOT</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.8.0-rc719.d6b007b88023</forensics-api-plugin.version>
     <plugin-util-api.version>1.4.0</plugin-util-api.version>
 
     <font-awesome-api.version>5.15.1-1</font-awesome-api.version>
