--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,7 +30,7 @@
     <analysis-model-api.version>9.3.2</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <forensics-api-plugin.version>0.8.0-rc719.d6b007b88023</forensics-api-plugin.version>
-    <plugin-util-api.version>1.4.0</plugin-util-api.version>
+    <plugin-util-api.version>1.5.0</plugin-util-api.version>
 
     <font-awesome-api.version>5.15.1-1</font-awesome-api.version>
     <jquery3-api.version>3.5.1-2</jquery3-api.version>
@@ -652,6 +652,18 @@
                 <code>java.annotation.*</code>
                 <annotation>@edu.umd.cs.findbugs.annotations.*</annotation>
                 <justification>Annotation should be save to change.</justification>
+              </item>
+              <item>
+                <regex>true</regex>
+                <code>java.annotation.*</code>
+                <annotation>@org.kohsuke.stapler.*</annotation>
+                <justification>Annotation should be save to change.</justification>
+              </item>
+              <item>
+                <regex>true</regex>
+                <code>java.method.removed</code>
+                <methodName>do[A-Z].*</methodName>
+                <justification>Form validation methods are no API methods</justification>
               </item>
             </revapi.ignore>
           </analysisConfiguration>
