Improve naming of checkboxes. Remove descriptions.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
@@ -9,5 +9,4 @@ description.consoleOrPattern=Specifies the report files to scan for issues, \
     such as ''**/target/checkstyle-results.xml''. If you leave this field blank, then the console log will be \
     scanned for issues.
 title.defaultPattern=Default Pattern
-title.skipSymbolicLinks=Skip Symbolic Links
-description.skipSymbolicLinks=Toggle whether the file scanner will skip symbolic links.
+title.skipSymbolicLinks=Skip symbolic links when searching for files
