--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/IssuesChartPortlet/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/IssuesChartPortlet/config.properties
@@ -1,2 +1,1 @@
-hide.title=Hide clean jobs
-hide.description=Hide all jobs that have no issues from the selected static analysis tools.
+hide.title=Hide all jobs that have no issues
