--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/tasks/OpenTasks/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/tasks/OpenTasks/config.properties
@@ -7,7 +7,7 @@ description.tags=Configure the tags identifiers that should be looked for in the
                 Only alphanumerical characters are allowed as tags as these strings are pasted into a regular \
                 expression. See option ''Regular expression'' if you want to control the regular expression on your own.
 
-description.asRegexp=Treat the tag identifiers as regular expression.
-description.ignoreCase=Ignore the case of the the tag identifiers.
+description.asRegexp=Treat the tag identifiers as regular expression
+description.ignoreCase=Ignore the case of the the tag identifiers
 description.example=Enter an example message that will be scanned for open tasks with the \
   properties specified in the entries above.
