--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/SpotBugs/local-config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/SpotBugs/local-config.properties
@@ -1,3 +1,1 @@
-title.useRankAsPriority=Use rank as severity
-description.useRankAsPriority=Uses the bug rank when evaluating the severity of the warnings \
-  (otherwise the SpotBugs priority is used).
+title.useRankAsPriority=Use the bug rank when evaluating the severity of the warnings
