--- a/plugin/src/main/resources/issues/recorder.properties
+++ b/plugin/src/main/resources/issues/recorder.properties
@@ -1,8 +1,6 @@
 title.tool=Static Analysis Tools
 description.tool=Select one or more static analysis tools.
 
-title.enabledForFailure=Run Always
-description.enabledForFailure=Enable recording for failed builds.
+title.enabledForFailure=Enable recording for failed builds
 
-title.aggregatingResults=Aggregate Results
-description.aggregatingResults=Aggregate results of all tools into a single result.
+title.aggregatingResults=Aggregate results of all tools into a single result
