Add option to publishing all or new issues.

--- a/plugin/src/main/resources/issues/publish-parameters.properties
+++ b/plugin/src/main/resources/issues/publish-parameters.properties
@@ -18,3 +18,4 @@ title.trendChartType=Trend chart type
 description.trendChartType=Select trend charts and their position.
 
 title.skipPublishingChecks=Skip publishing of checks to SCM provider platforms
+title.publishAllIssues=Publish new and outstanding issues to SCM provider platforms
