--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -27,7 +27,7 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>9.4.0</analysis-model-api.version>
+    <analysis-model-api.version>9.5.0-SNAPSHOT</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <forensics-api-plugin.version>0.8.0-rc719.d6b007b88023</forensics-api-plugin.version>
     <plugin-util-api.version>1.5.0</plugin-util-api.version>
@@ -348,7 +348,7 @@
     <dependency>
       <groupId>edu.hm.hafner</groupId>
       <artifactId>analysis-model</artifactId>
-      <version>${analysis-model-tests.version}</version>
+      <version>9.5.0-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
       <exclusions>
