--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -61,11 +61,8 @@
       <url>https://repo.jenkins-ci.org/releases/</url>
     </repository>
     <repository>
-      <id>maven.jenkins-ci.org-sn</id>
-      <url>https://repo.jenkins-ci.org/snapshots/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
+      <id>incrementals.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/incrementals/</url>
     </repository>
   </repositories>
 
