--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -26,8 +26,8 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>9.6.0-rc353.9a5ca92520cb</analysis-model-api.version>
-    <analysis-model-tests.version>9.6.0-rc3852.afbd64d4bd5d</analysis-model-tests.version>
+    <analysis-model-api.version>9.5.0</analysis-model-api.version>
+    <analysis-model-tests.version>9.5.0</analysis-model-tests.version>
     <forensics-api-plugin.version>0.8.0</forensics-api-plugin.version>
     <plugin-util-api.version>1.6.1</plugin-util-api.version>
 
