Add an integration test for the parser of the parasoft-findings plugin.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -365,6 +365,12 @@
 
     <!-- Jenkins Plug-in Dependencies required for integration tests -->
     <dependency>
+      <groupId>com.parasoft</groupId>
+      <artifactId>parasoft-findings</artifactId>
+      <version>10.5.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>flexible-publish</artifactId>
       <version>${flexible-publish.version}</version>
