--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,19 @@ jobs:
     name: on ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2.3.4
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Cache local Maven repository
+      uses: actions/cache@v2.1.3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: Build with Maven
       env:
-        BROWSER: firefox-container
-      run: mvn -V -ntp clean verify --file pom.xml  '-Djenkins.test.timeout=5000' '-DElasticTime.factor=2' '-Dsurefire.rerunFailingTestsCount=2'
+        BROWSER: chrome-container
+      run: mvn -V -ntp clean verify --file pom.xml '-Djenkins.test.timeout=5000' '-Dgpg.skip'
