--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,7 +29,7 @@
     <analysis-model-api.version>9.8.0</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <forensics-api-plugin.version>0.10.0</forensics-api-plugin.version>
-    <plugin-util-api.version>1.6.1</plugin-util-api.version>
+    <plugin-util-api.version>1.7.0</plugin-util-api.version>
 
     <font-awesome-api.version>5.15.2-1</font-awesome-api.version>
     <jquery3-api.version>3.5.1-2</jquery3-api.version>
@@ -688,9 +688,9 @@
               </item>
               <item>
                 <regex>true</regex>
-                <code>java.field.enumConstantOrderChanged</code>
-                <classQualifiedName>io.jenkins.plugins.analysis.core.util.TrendChartType</classQualifiedName>
-                <justification>Internal API to render the available trends.</justification>
+                <code>java.method.numberOfParametersChanged</code>
+                <methodName>do[A-Z].*</methodName>
+                <justification>Validation methods are internal API.</justification>
               </item>
             </revapi.ignore>
           </analysisConfiguration>
