--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,6 +30,7 @@
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <forensics-api-plugin.version>0.10.1</forensics-api-plugin.version>
     <plugin-util-api.version>1.7.1</plugin-util-api.version>
+    <codingstyle.config.version>2.0.5</codingstyle.config.version>
 
     <font-awesome-api.version>5.15.2-1</font-awesome-api.version>
     <jquery3-api.version>3.5.1-2</jquery3-api.version>
