--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -34,7 +34,7 @@
 
     <data-tables-api.version>1.10.23-3-rc393.cd58f9c6c9ca</data-tables-api.version>
     <echarts-api.version>4.9.0-4-rc356.d6d2dd7b0bf9</echarts-api.version>
-    <font-awesome-api.version>5.15.2-1</font-awesome-api.version>
+    <font-awesome-api.version>5.15.2-2-rc239.9679017bcfd6</font-awesome-api.version>
     <jquery3-api.version>3.5.1-2</jquery3-api.version>
     <bootstrap4-api.version>4.6.0-2-rc333.2b112c91d60f</bootstrap4-api.version>
 
