--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -26,17 +26,18 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>9.9.0-rc371.fee3ee764a0d</analysis-model-api.version>
-    <analysis-model-tests.version>9.8.0</analysis-model-tests.version>
+    <analysis-model-api.version>9.8.1</analysis-model-api.version>
+    <analysis-model-tests.version>9.8.1</analysis-model-tests.version>
 
-    <forensics-api-plugin.version>1.0.0-rc837.0715d1a7f416</forensics-api-plugin.version>
-    <plugin-util-api.version>2.0.0-rc279.38d141835605</plugin-util-api.version>
+    <forensics-api-plugin.version>1.0.0</forensics-api-plugin.version>
+    <plugin-util-api.version>2.0.0</plugin-util-api.version>
 
-    <data-tables-api.version>1.10.23-3-rc393.cd58f9c6c9ca</data-tables-api.version>
-    <echarts-api.version>4.9.0-4-rc356.d6d2dd7b0bf9</echarts-api.version>
-    <font-awesome-api.version>5.15.2-2-rc239.9679017bcfd6</font-awesome-api.version>
-    <jquery3-api.version>3.5.1-2</jquery3-api.version>
-    <bootstrap4-api.version>4.6.0-2-rc333.2b112c91d60f</bootstrap4-api.version>
+    <data-tables-api.version>1.10.23-3</data-tables-api.version>
+    <echarts-api.version>4.9.0-4</echarts-api.version>
+    <font-awesome-api.version>5.15.2-2</font-awesome-api.version>
+    <jquery3-api.version>3.5.1-3</jquery3-api.version>
+    <bootstrap4-api.version>4.6.0-2</bootstrap4-api.version>
+    <popper-api.version>1.16.1-2</popper-api.version>
 
     <commons.digester.version>2.1</commons.digester.version>
     <commons.digester3.version>3.2</commons.digester3.version>
@@ -80,8 +81,6 @@
 
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000</argLine>
-
-    <useBeta>true</useBeta>
   </properties>
 
   <licenses>
@@ -115,6 +114,16 @@
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>code-coverage-api</artifactId>
         <version>1.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>popper-api</artifactId>
+        <version>${popper-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.errorprone</groupId>
+        <artifactId>error_prone_annotations</artifactId>
+        <version>2.5.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
