--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -38,8 +38,8 @@
     <jquery3-api.version>3.5.1-3</jquery3-api.version>
     <bootstrap4-api.version>4.6.0-2</bootstrap4-api.version>
     <popper-api.version>1.16.1-2</popper-api.version>
+    <error_prone_annotations.version>2.5.1</error_prone_annotations.version>
 
-    <commons.digester.version>2.1</commons.digester.version>
     <commons.digester3.version>3.2</commons.digester3.version>
 
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
@@ -101,21 +101,6 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
-        <version>2.4.21</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-net</groupId>
-        <artifactId>commons-net</artifactId>
-        <version>3.7.2</version>
-      </dependency>
-      <dependency>
-        <groupId>io.jenkins.plugins</groupId>
-        <artifactId>code-coverage-api</artifactId>
-        <version>1.2.0</version>
-      </dependency>
-      <dependency>
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>popper-api</artifactId>
         <version>${popper-api.version}</version>
@@ -123,7 +108,7 @@
       <dependency>
         <groupId>com.google.errorprone</groupId>
         <artifactId>error_prone_annotations</artifactId>
-        <version>2.5.1</version>
+        <version>${error_prone_annotations.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
