--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -57,15 +57,15 @@
 
     <!-- Jenkins Plug-in Dependencies Versions -->
     <autograding.version>3.3.1</autograding.version>
-    <token-macro.version>2.12</token-macro.version>
+    <token-macro.version>2.13</token-macro.version>
     <jenkins-maven-plugin.version>3.8</jenkins-maven-plugin.version>
     <matrix-project.version>1.18</matrix-project.version>
     <junit-plugin.version>1.35</junit-plugin.version>
     <antisamy-markup-formatter.version>2.1</antisamy-markup-formatter.version>
     <dashboard-view.version>2.14</dashboard-view.version>
-    <script-security.version>1.62</script-security.version>
+    <script-security.version>1.76</script-security.version>
     <httpcomponents-client.version>4.5.13-1.0</httpcomponents-client.version>
-    <configuration-as-code.version>1.36</configuration-as-code.version>
+    <configuration-as-code.version>1.46</configuration-as-code.version>
     <job-dsl.version>1.77</job-dsl.version>
     <envinject.version>2.3.0</envinject.version>
     <flexible-publish.version>0.15.2</flexible-publish.version>
@@ -78,6 +78,7 @@
     <folder.version>6.15</folder.version>
     <scm-api.version>2.6.3</scm-api.version>
     <checks-api.version>1.5.0</checks-api.version>
+    <credentials.version>2.3.14</credentials.version>
 
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000</argLine>
@@ -100,6 +101,16 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>trilead-api</artifactId>
+        <version>1.0.13</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>script-security</artifactId>
+        <version>${script-security.version}</version>
+      </dependency>
       <dependency>
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>popper-api</artifactId>
@@ -286,6 +297,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>credentials</artifactId>
+      <version>${credentials.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -336,6 +348,12 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
       <version>4.6.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>git-client</artifactId>
+      <version>3.6.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
