--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
@@ -4,3 +4,5 @@ title.basedir=Base Directory
 description.basedir=This is the base directory in your workspace (must match the projectdir setting of the analysis). You can use jenkins environment variables here, e.g. $WORKSPACE
 title.credentialsId=Credentials ID
 description.credentialsId=The ID of the credentials (as stored in Jenkins credential store) used for authentication against the Axivion Server.
+title.namedFilter=Named Filter
+description.namedFilter=Named Filters are stored filter and sorter configurations that store column filters and sorters and the path filter. The named filter id should be used here (e.g. p_show_all) not the display name. Only named filters supported by all issue kinds should be used. Requires Axivion Dashboard 7.2.0+.
