--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -119,6 +119,11 @@
         <artifactId>error_prone_annotations</artifactId>
         <version>${error_prone_annotations.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -257,7 +262,7 @@
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>5.0.4</version>
+      <version>8.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -496,6 +501,10 @@
         <exclusion>
           <groupId>commons-beanutils</groupId>
           <artifactId>commons-beanutils</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>edu.hm.hafner</groupId>
+          <artifactId>codingstyle</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
