--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -27,8 +27,8 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>10.0.0-rc407.7f13798c25d7</analysis-model-api.version>
-    <analysis-model-tests.version>10.0.0-rc4102.61f2fa8aef99</analysis-model-tests.version>
+    <analysis-model-api.version>10.0.0-rc412.b44250d40e97</analysis-model-api.version>
+    <analysis-model-tests.version>10.0.0</analysis-model-tests.version>
 
     <forensics-api-plugin.version>1.0.0</forensics-api-plugin.version>
     <plugin-util-api.version>2.1.0</plugin-util-api.version>
