Migrate UI to Bootstrap 5.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -36,7 +36,7 @@
     <echarts-api.version>5.0.2-1</echarts-api.version>
     <font-awesome-api.version>5.15.2-2</font-awesome-api.version>
     <jquery3-api.version>3.6.0-1</jquery3-api.version>
-    <bootstrap4-api.version>4.6.0-3</bootstrap4-api.version>
+    <bootstrap5-api.version>5.0.0-beta3-1-SNAPSHOT</bootstrap5-api.version>
     <popper-api.version>1.16.1-2</popper-api.version>
     <error_prone_annotations.version>2.6.0</error_prone_annotations.version>
 
@@ -173,8 +173,8 @@
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
-      <artifactId>bootstrap4-api</artifactId>
-      <version>${bootstrap4-api.version}</version>
+      <artifactId>bootstrap5-api</artifactId>
+      <version>${bootstrap5-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
